--- a/photo/app/views/galerie/show.html.erb
+++ b/photo/app/views/galerie/show.html.erb
@@ -1,52 +1,16 @@
 <% title "Galeria" %>
 
 <% content_for :head do %>
-  <%= stylesheet_link_tag 'style' %>
-  <style>
-    .thumb {
-      width: 150px;
-      height: 105px;
-    }
-    .thumbflat {
-      width: 142px;
-      height: 50px;
-    }
-  </style>
-<% end %>
+  <% end %>
 
-<div id="menu">
-  <ul>
-    <li><%= link_to "HOME", root_url %></li> 
-    <li><%= link_to "KATEGORIE", kategorie_path %></li>
-    <% if current_user %>
-      <li><%= link_to "MOJE GALERIE", galerie_path, :class => :selected %></li>
-    <% end %>
-  </ul>
-</div>
-
-<div id="site_content">
-  <div id="side_menu">
-    <% for galeria in @galerie %>
-      <% if galeria.zdjecia.exists? %>
-        <div class="side_menu_item">
-          <% link_to galeria do %>
-            <%= image_tag galeria.zdjecia.find(:first).photo.url(:thumb), :class => :thumbflat %>
-          <% end %>
-          <span><%= h galeria.nazwa %></span>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-  <div id="content">
-    <h1>Galeria: <%= @galeria.nazwa %></h1>
-    <h2>Opis: <%= @galeria.opis %></h2>
+ <div id="content">
+    <h1>Galeria: <%= @galeria.nazwa %> | Opis: <%= @galeria.opis %></h1>
 
     <% if current_user && current_user[:login] == @galeria.autor %>
       <ul>
           <li><%= link_to "Edytuj opis galerii", edit_galeria_path(@galeria) %>
           <li><%= link_to "Usuń galerię", @galeria, :confirm => 'Na pewno usunąć tę galerię?', :method => :delete %>
-          <li><%= link_to "Dodaj zdjęcie", { :controller => 'zdjecia',  :action => 'new', :nr_galerii => @galeria.id} %>
-          <li><%= link_to "Dodaj galerię", new_galeria_path %>
+          <li><%= link_to "Dodaj nowe zdjęcie", { :controller => 'zdjecia',  :action => 'new', :nr_galerii => @galeria.id} %>
       </ul>
     <% end %>
     <ul>
@@ -54,7 +18,8 @@
         <li>
         <% link_to zdjecie do %>
           <%= image_tag zdjecie.photo.url(:thumb), :class => :thumb %>
-          </li>
+
+        </li>
         <% end %>
       <% end %>
     </ul>
