--- a/photo/app/views/zdjecia/crop.html.erb
+++ b/photo/app/views/zdjecia/crop.html.erb
@@ -15,7 +15,7 @@
       $('#cropbox').Jcrop({  
         onChange: update_crop,  
         onSelect: update_crop,  
-        aspectRatio: 1  
+        setSelect: [ 100, 100, 50, 50 ],          
       });  
     });
 
