--- a/photo/app/views/layouts/application.html.erb
+++ b/photo/app/views/layouts/application.html.erb
@@ -3,43 +3,48 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title><%= h(yield(:title) || "Rails Photo") %></title>
-    <%= stylesheet_link_tag 'colour' %>
     <%= stylesheet_link_tag 'style' %>
     <%= javascript_include_tag :defaults %>
     <%= ajaxful_rating_style %>  
     <%= yield(:head) %>
   </head>
   <body>
-    <div id="container">
-      <% if false %>
-        <div id="page_nav">
-          <%= link_to "Home", root_url %>
-          <%= link_to "Kategorie", kategorie_path %>
-        </div>
-        <div id="user_nav">
-          <% if current_user %>
-            <%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %>
-            <%= link_to "Wyloguj", logout_path %>
-          <% else %>
-            <%= link_to "Rejestracja", new_uzytkownik_path %>
-            <%= link_to "Zaloguj", login_path %>
+       <header>
+            <h1>railsphoto</h1>
+            <ul>
+              <% if current_user %>
+                <li>Zalogowany jako <strong><%= current_user.login %></strong></li>
+                <li><%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %></li>
+                <li><%= link_to "Wyloguj", logout_path %></li>
+              <% else %>
+                <li><%= link_to "Rejestracja", new_uzytkownik_path %></li>
+                <li><%= link_to "Zaloguj", login_path %></li>
           <% end %>
-        </div>
-      <% end %>
+            </ul>
+          
+            <ul id="search">
+              <li><% form_tag zdjecia_path, :method => 'get' do %>
+              <p>
+                <%= text_field_tag :szukaj_opisu, params[:szukaj_opisu] %>
+                <%= submit_tag "Szukaj", :name => nil %>
+            </p>
+          <% end %></li>
+      </ul>
 
-      <div id="logo">
-        <h1>railsphoto</h1>
-        <div id="links">
-          <% if current_user %>
-            <%= link_to "Edytuj profil", edit_uzytkownik_path(:current) %>
-            <%= link_to "Wyloguj", logout_path %>
-          <% else %>
-            <%= link_to "Rejestracja", new_uzytkownik_path %>
-            <%= link_to "Zaloguj", login_path %>
-          <% end %>
-        </div>
-      </div>
-      <%- flash.each do |name, msg| -%>
+       </header>
+                <nav>
+            <ul>
+              <li><%= link_to "HOME", root_path %></li>
+              <li><%= link_to "KATEGORIE", kategorie_path %></li>
+              <li><%= link_to "MAPA", mapa_path %></li>
+              <% if current_user %>
+              <li><%= link_to "MOJE GALERIE", galerie_path %> </li>
+              <% end %>
+              <li><a href="about.html">O NAS</a></li>
+            </ul>
+        </nav>
+
+     <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
 
@@ -50,6 +55,5 @@
     <% end %>
 
       <%= yield %>
-    </div>
   </body>
 </html>
