--- a/photo/app/views/uzytkownicy/edit.html.erb
+++ b/photo/app/views/uzytkownicy/edit.html.erb
@@ -1,4 +1,6 @@
 <% title "Edycja użytkownika" %>
-<div id="site_content">
-  <%= render @uzytkownik %>
-</div>
+<section id="content">
+<section id="profil">
+<%= render @uzytkownik %>
+</section>
+</section>
