--- a/photo/app/views/zdjecia/edit.html.erb
+++ b/photo/app/views/zdjecia/edit.html.erb
@@ -1,10 +1,10 @@
 <% title "Edycja Zdjęcia" %>
 
-<div id="site_content">
+<section id="content">
   <%= render :partial => 'form' %>
 
   <p>
   <%= link_to "Pokaż to zdjęcie", @zdjecie %>
   <%= link_to "Pokaż wszystkie zdjęcia", zdjecia_path %>
   </p>
-</div>
+  </section>
