--- a/photo/app/views/zdjecia/_form.html.erb
+++ b/photo/app/views/zdjecia/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for (@zdjecie, :html => {:multipart => true}) do |f| %>
+<% form_for (@zdjecie, :html => {:class => :duzy, :multipart => true}) do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :opis %><br />
