--- a/photo/app/views/zdjecia/show.html.erb
+++ b/photo/app/views/zdjecia/show.html.erb
@@ -11,7 +11,7 @@
 
     <section id="content">
 				<article id="show"> 
-            <h1><%=h @zdjecie.opis %> | Wyświetlono: <%=h @zdjecie.licznik %></h1>
+                <h1><%=h @zdjecie.opis %> </h1><h3> Liczba Wyświetleń: <%=h @zdjecie.licznik %></h3>
 
 
             
